crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_active_tool_done.snap
---
source: crates/oxicode-tui/src/app.rs
expression: normalized_rendered_text(&terminal).as_str()
---
" ○ Ready  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  [ask]                       "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│◀ OxiCode                                                                     │"
"│  ⠋ Thinking... (0.0s)                                                        │"
"│  ✓ bash (0.0s) — echo hello                                                  │"
"│    hello                                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
