crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_after_message_complete.snap
---
source: crates/oxicode-tui/src/app.rs
expression: after_complete.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  [ask]            "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│   ██████╗ ██╗  ██╗██╗ ██████╗ ██████╗ ██████╗ ███████╗                       │"
"│  ██╔═══██╗╚██╗██╔╝██║██╔════╝██╔═══██╗██╔══██╗██╔════╝                       │"
"│  ██║   ██║ ╚███╔╝ ██║██║     ██║   ██║██║  ██║█████╗                         │"
"│  ██║   ██║ ██╔██╗ ██║██║     ██║   ██║██║  ██║██╔══╝                         │"
"│  ╚██████╔╝██╔╝ ██╗██║╚██████╗╚██████╔╝██████╔╝███████╗                       │"
"│   ╚═════╝ ╚═╝  ╚═╝╚═╝ ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝                       │"
"│                                                                              │"
"│  v0.1.0 • claude-sonnet-4-20250514 •                                         │"
"│                                                                              │"
"│  Enter  — send message    Ctrl+C  — interrupt/quit                           │"
"│  Tab    — toggle panel    /help   — commands                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  1: What can you do?   2: Explain codebase                                     "
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
