crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_baseline.snap
---
source: crates/oxicode-tui/src/app.rs
assertion_line: 2137
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│   ██████╗ ██╗  ██╗██╗ ██████╗ ██████╗ ██████╗ ███████╗                       │"
"│  ██╔═══██╗╚██╗██╔╝██║██╔════╝██╔═══██╗██╔══██╗██╔════╝                       │"
"│  ██║   ██║ ╚███╔╝ ██║██║     ██║   ██║██║  ██║█████╗                         │"
"│  ██║   ██║ ██╔██╗ ██║██║     ██║   ██║██║  ██║██╔══╝                         │"
"│  ╚██████╔╝██╔╝ ██╗██║╚██████╗╚██████╔╝██████╔╝███████╗                       │"
"│   ╚═════╝ ╚═╝  ╚═╝╚═╝ ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝                       │"
"│                                                                              │"
"│  v0.1.0 • claude-sonnet-4-20250514 •                                         │"
"│                                                                              │"
"│  Enter  — send message    Ctrl+C  — interrupt/quit                           │"
"│  Tab    — toggle panel    /help   — commands                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
