crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_permission_dialog_overlay.snap
---
source: crates/oxicode-tui/src/app.rs
assertion_line: 2224
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  [ask]            "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│    ┌──────────────────────────── Allow bash ────────────────────────────┐    │"
"│   █│                                                                    │    │"
"│  ██│  Command:                                                          │    │"
"│  ██│  ┌──────────────────────────────────────────────────────────────┐  │    │"
"│  ██│  │ echo hello                                                      │    │"
"│  ╚█│  └──────────────────────────────────────────────────────────────┘  │    │"
"│   ╚│                                                                    │    │"
"│    │  ▸ [y] Allow once                                                  │    │"
"│  v0│    [a] Always allow                                                │    │"
"│    │    [n] Deny                                                        │    │"
"│  En│    [N] Always deny                                                 │    │"
"│  Ta│                                                                    │    │"
"│    │  ↑↓ navigate  Enter confirm  Esc deny                              │    │"
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"│    └────────────────────────────────────────────────────────────────────┘    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
