crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_scroll_at_top.snap
---
source: crates/oxicode-tui/src/app.rs
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────█"
"│▏ ❯ You                                                                       █"
"│▏   Msg 1                                                                     █"
"│                                                                              │"
"│◆ Assistant                                                                   │"
"│  Resp 1                                                                      │"
"│                                                                              │"
"│────────────────────────────────────────────────────────────                  │"
"│                                                                              │"
"│▏ ❯ You                                                                       │"
"│▏   Msg 2                                                                     │"
"│                                                                              │"
"│◆ Assistant                                                                   │"
"│  Resp 2                                                                      │"
"│                                                                              │"
"│────────────────────────────────────────────────────────────                  │"
"│                                                                              │"
"│▏ ❯ You                                                                       │"
"│▏   Msg 3                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────│"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
