crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_scroll_manual_at_bottom.snap
---
source: crates/oxicode-tui/src/app.rs
expression: rendered.as_str()
---
" ○ Ready  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  [ask]                       "
"┌ Conversation ────────────────────────────────────────────────────────────────│"
"│  Line 19                                                                     │"
"│                                                                              │"
"│ ────────────────────────────────────────────────────────────                 │"
"│                                                                              │"
"│◀ OxiCode                                                                     │"
"│  Answer 19                                                                   │"
"│                                                                              │"
"│ ────────────────────────────────────────────────────────────                 │"
"│                                                                              │"
"│▶ You                                                                         │"
"│  Line 20                                                                     │"
"│                                                                              │"
"│ ────────────────────────────────────────────────────────────                 │"
"│                                                                              │"
"│◀ OxiCode                                                                     │"
"│  Answer 20                                                                   │"
"│                                                                              █"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────│"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
