crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_scroll_to_bottom_auto.snap
---
source: crates/oxicode-tui/src/app.rs
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  [ask]            "
"┌ Conversation ────────────────────────────────────────────────────────────────│"
"│  Message number 29                                                           │"
"│                                                                              │"
"│ ────────────────────────────────────────────────────────────                 │"
"│                                                                              │"
"│◀ OxiCode                                                                     │"
"│  Reply to message 29                                                         │"
"│                                                                              │"
"│ ────────────────────────────────────────────────────────────                 │"
"│                                                                              │"
"│▶ You                                                                         │"
"│  Message number 30                                                           │"
"│                                                                              │"
"│ ────────────────────────────────────────────────────────────                 │"
"│                                                                              │"
"│◀ OxiCode                                                                     │"
"│  Reply to message 30                                                         │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────█"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
