crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_scroll_wide_content_wrapping.snap
---
source: crates/oxicode-tui/src/app.rs
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-202"
"┌ Conversation ────────────────────────│"
"│AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA│"
"│AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA│"
"│AAAAAAAAAAAA                          │"
"│                                      █"
"│──────────────────────────────────────█"
"│──────────────────────                █"
"│                                      █"
"│▏ ❯ You                               █"
"│▏   Final question                    █"
"│                                      █"
"│◆ Assistant                           █"
"│  Final answer here                   █"
"│                                      █"
"│                                      █"
"└──────────────────────────────────────█"
"┌ Input (Enter to send, Alt+Enter for n┐"
"│Type your message...                  │"
"└──────────────────────────────────────┘"
