crates/oxicode-tui/src/snapshots/oxicode_tui__app__tests__app_streaming_thinking_indicator.snap
---
source: crates/oxicode-tui/src/app.rs
expression: rendered.as_str()
---
" ○ Ready  anthropic  claude-sonnet-4-20250514  ↑0 ↓0  $0.0000  0s [ask]         "
"┌ Conversation ────────────────────────────────────────────────────────────────┐"
"│◆ Assistant                                                                   │"
"│  ⠙ Thinking... (0.0s)                                                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Input (Enter to send, Alt+Enter for newline) ────────────────────────────────┐"
"│Type your message...                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
